<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>devfun.bookstore</groupId>
    <artifactId>restapp</artifactId>
    <packaging>war</packaging>
    <version>1.1.0-SNAPSHOT</version>
    <name>restapp Maven Webapp</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Test -->
        <version.junit>4.11</version.junit>
        <version.hamcrest>1.3</version.hamcrest>

        <!-- Logging -->
        <version.slf4j>1.7.5</version.slf4j>
        <version.logback>1.0.13</version.logback>

        <!-- Spring -->
        <version.spring>3.2.5.RELEASE</version.spring>

        <!-- MyBatis -->
        <version.mybatis>3.2.3</version.mybatis>
        <version.mybatis.spring>1.2.1</version.mybatis.spring>

        <!-- Jackson -->
        <version.jackson>2.2.3</version.jackson>

        <!-- Servlet -->
        <version.servlet>2.5</version.servlet>
    </properties>


    <dependencies>
        <!-- hamcrest -->
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>${version.hamcrest}</version>
            <scope>test</scope>
        </dependency>

        <!-- JUnit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.github.springtestdbunit</groupId>
            <artifactId>spring-test-dbunit</artifactId>
            <version>1.0.1</version>
            <scope>test</scope>
        </dependency>


        <!-- Json-path -->
        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>0.9.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${version.spring}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <artifactId>commons-logging</artifactId>
                    <groupId>commons-logging</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Logging with SLF4J & LogBack -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${version.slf4j}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>${version.slf4j}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${version.logback}</version>
        </dependency>


        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>${version.spring}</version>
            <exclusions>
                <exclusion>
                    <artifactId>commons-logging</artifactId>
                    <groupId>commons-logging</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
            <version>${version.spring}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-oxm</artifactId>
            <version>${version.spring}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.hateoas</groupId>
            <artifactId>spring-hateoas</artifactId>
            <version>0.8.0.RELEASE</version>
        </dependency>

        <!-- MyBatis -->
        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis</artifactId>
            <version>${version.mybatis}</version>
        </dependency>

        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis-spring</artifactId>
            <version>${version.mybatis.spring}</version>
        </dependency>

        <!-- HSQLDB -->
        <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>2.3.1</version>
        </dependency>

        <dependency>
            <groupId>org.pojomatic</groupId>
            <artifactId>pojomatic</artifactId>
            <version>1.0</version>
        </dependency>

        <!-- Jackson -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${version.jackson}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${version.jackson}</version>
        </dependency>

        <!-- <dependency> <groupId>com.fasterxml.jackson.module</groupId> <artifactId>jackson-module-jaxb-annotations</artifactId>
            <version>${version.version}</version> </dependency> -->

        <!-- SERVLET -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>${version.servlet}</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <build>
        <finalName>restapp</finalName>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <configuration>
                    <argLine>
                        -Xms256m -Xmx512m -XX:MaxPermSize=128m
                        -Dfile.encoding=UTF-8
                    </argLine>
                </configuration>
            </plugin>

            <!--Goals=findbugs:findbugs Url=http://mojo.codehaus.org/findbugs-maven-plugin/plugin-info.html-->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>2.5.3</version>
            </plugin>

            <!--checkstyle:checkstyle http://maven.apache.org/plugins/maven-checkstyle-plugin/-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.11</version>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <configuration>
                            <!--<configLocation>checkstyle.xml</configLocation>-->
                            <encoding>UTF-8</encoding>
                            <consoleOutput>true</consoleOutput>
                            <failsOnError>true</failsOnError>
                            <linkXRef>false</linkXRef>
                        </configuration>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!--pmd:cpd, pmd:pmd http://maven.apache.org/plugins/maven-pmd-plugin/plugin-info.html-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>3.1</version>
            </plugin>

            <!--cobertura:cobertura http://mojo.codehaus.org/cobertura-maven-plugin/-->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.6</version>
                <!--<configuration>-->
                    <!--<instrumentation>-->
                        <!--<ignores>-->
                            <!--<ignore>com.example.boringcode.*</ignore>-->
                        <!--</ignores>-->
                        <!--<excludes>-->
                            <!--<exclude>com/example/dullcode/**/*.class</exclude>-->
                            <!--<exclude>com/example/**/*Test.class</exclude>-->
                        <!--</excludes>-->
                    <!--</instrumentation>-->
                <!--</configuration>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<goals>-->
                            <!--<goal>clean</goal>-->
                        <!--</goals>-->
                    <!--</execution>-->
                <!--</executions>-->
            </plugin>
        </plugins>
    </build>

    <!--http://maven.apache.org/pom.html-->

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <organization>
        <name>Devkook</name>
        <url>http://devkook.tumblr.com</url>
    </organization>

    <developers>
        <developer>
            <id>devkook</id>
            <name>Devin kook</name>
            <email>devinkook@gmail.com</email>
            <url>http://eric.propellors.net</url>
            <organization>Devkook</organization>
            <organizationUrl>http://devkook.tumblr.com</organizationUrl>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>+9</timezone>
            <properties>
                <picUrl>http://devkook.tumblr.com</picUrl>
            </properties>
        </developer>
    </developers>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/devkook/book-restapp-all/issues</url>
    </issueManagement>

    <ciManagement>
        <system>jenkins</system>
        <url>https://devkook.ci.cloudbees.com</url>
        <notifiers>
            <notifier>
                <type>mail</type>
                <sendOnError>true</sendOnError>
                <sendOnFailure>true</sendOnFailure>
                <sendOnSuccess>true</sendOnSuccess>
                <sendOnWarning>true</sendOnWarning>
                <configuration>
                    <address>devinkook@gamil.com</address>
                </configuration>
            </notifier>
        </notifiers>
    </ciManagement>

    <scm>
        <url>https://github.com/devkook/book-restapp-all</url>
        <connection>scm:git:git://github.com:devkook/book-restapp-all.git</connection>
        <developerConnection>scm:git:git://github.com:devkook/book-restapp-all.git</developerConnection>
    </scm>

</project>
